syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Application";
option java_multiple_files = true;
option java_package = "sep3.server";
option java_outer_classname = "ItemProto";

message Address {
  int32 door_number = 1;
  string street = 2;
  string city = 3;
  string state = 4;
  int32 postal_code = 5;
  string country = 6;
}

message Customer {
  int32 id = 1;
  string user_name = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
  Address address = 6;
}

message GetCustomerRequest {
  string username = 1;
  string password = 2;
}

message CustomerResponse {
  Customer customer = 1;
}

service CustomerService {
  rpc createCustomer(Customer) returns (CustomerResponse){};
  rpc getCustomer(GetCustomerRequest) returns (CustomerResponse){};
  rpc updateCustomer(Customer) returns (CustomerResponse){};
  rpc deleteCustomer(google.protobuf.StringValue) returns (google.protobuf.Empty){};
}
